[project]
name = "advance-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imbalanced-learn>=0.12.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "missforest>=2.0.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-pptx>=0.6.23",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]
